--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+
+ .landing{
+     background-color: red;
+     width: 100%;
+     height: 800px;
+ }
+
+ .projects{
+    background-color: green;
+    width: 100%;
+    height: 800px;
+}
+.about{
+    background-color: blue;
+    width: 100%;
+    height: 800px;
+}
+.myNavBar{
+    position: fixed;
+    top:0px;
+    width: 1110px;
+}
