--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,6 @@
  *= require_self
  */
 
-
  .landing{
      background-color: red;
      width: 100%;
@@ -31,8 +30,11 @@
     width: 100%;
     height: 800px;
 }
-.myNavBar{
+#myNavBar{
     position: fixed;
     top:0px;
-    width: 1110px;
+    width: 100% ;
+}
+#myNavBarCore{
+    padding: 0.25rem;
 }
