--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,28 +13,35 @@
  *= require_tree .
  *= require_self
  */
+ html {
+    scroll-behavior: smooth;
+  }
 
+ .abc{
+    overflow-y: scroll;
+ }
  .landing{
      background-color: red;
      width: 100%;
-     height: 800px;
+     height: 100vh;
  }
-
  .projects{
     background-color: green;
     width: 100%;
-    height: 800px;
+    height: 100vh;
 }
 .about{
     background-color: blue;
     width: 100%;
-    height: 800px;
+    height: 100vh;
 }
 #myNavBar{
     position: fixed;
-    top:0px;
-    width: 100% ;
+    bottom:0px;
+    left:25%;
+    width: 50% ;
 }
 #myNavBarCore{
     padding: 0.25rem;
 }
+
