--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,33 +15,43 @@
  */
  html {
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
   }
-
- .abc{
-    overflow-y: scroll;
- }
  .landing{
      background-color: red;
      width: 100%;
      height: 100vh;
+     scroll-snap-align: start;
  }
  .projects{
     background-color: green;
     width: 100%;
     height: 100vh;
+    scroll-snap-align: start;
 }
 .about{
     background-color: blue;
     width: 100%;
     height: 100vh;
+    scroll-snap-align: start;
 }
-#myNavBar{
+#navigation{
     position: fixed;
-    bottom:0px;
-    left:25%;
-    width: 50% ;
+    bottom:2%;
+    display:flex;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
 }
 #myNavBarCore{
     padding: 0.25rem;
 }
 
+.navButts{
+    display: inline;
+    margin:5px;
+    padding:20px;
+}
+.centering{
+    text-align: center;
+}
