--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,24 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+ .faceThumbnail{
+     width: 30vh;
+ }
+
  html {
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
   }
  .landing{
-     background-color: red;
      width: 100%;
      height: 100vh;
      scroll-snap-align: start;
  }
  .projects{
-    background-color: green;
     width: 100%;
     height: 100vh;
     scroll-snap-align: start;
 }
 .about{
-    background-color: blue;
     width: 100%;
     height: 100vh;
     scroll-snap-align: start;
@@ -54,4 +56,45 @@
 }
 .centering{
     text-align: center;
+    position: relative;
+    top:25%;
+}
+
+/* this is where for projects transition */
+
+figure {
+    float: left;
+    height: 12em;
+    margin: 1.5em;
+    width: 24em;
+    -webkit-transform: perspective(500);
+    -webkit-transform-style: preserve-3d;
+    -webkit-transition: .5s;
+}
+figure:hover {
+    -webkit-transform: perspective(500) rotateX(90deg) translateY(-3em) translateZ(3em);
+}
+figure > img {
+    background-color: #222;
+    box-shadow: 0 20px 15px -10px hsla(0,0%,0%,.25);
+    display: block;
+    height: 100%;
+    -webkit-transition: .5s;
+}
+figure:hover img {
+    box-shadow: none;
+}
+figcaption {
+    background-color: #222;
+    color: #fff;
+    padding: 1.5em;
+    -webkit-transform: rotateX(-90deg);
+    -webkit-transform-origin: 100% 0;
+    -webkit-transition: .5s;
+}
+figure:hover figcaption {
+    box-shadow: 0 20px 15px -10px hsla(0,0%,0%,.25);
+}
+h3 {
+    font-weight: bold;
 }
