--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+ body{
+     background-color: #8FC0A9;
+ }
 
  .faceThumbnail{
      width: 30vh;
@@ -20,30 +23,31 @@
 
  html {
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+
   }
  .landing{
      width: 100%;
      height: 100vh;
-     scroll-snap-align: start;
+     background-color: #8FC0A9;
+     color: #FAF3DD;
+     /* #C8D5B9 or #FAF3DD */
  }
  .projects{
     width: 100%;
     height: 100vh;
-    scroll-snap-align: start;
+    background-color: #8FC0A9;
 }
 .about{
     width: 100%;
     height: 100vh;
-    scroll-snap-align: start;
+    background-color: #8FC0A9;
 }
 #navigation{
     position: fixed;
     bottom:2%;
-    display:flex;
-    justify-content: center;
-    margin: 0 auto;
-    width: 100%;
+    width:10vw;
+    left:44.5vw;
+    text-align: center;
 }
 #myNavBarCore{
     padding: 0.25rem;
@@ -53,16 +57,17 @@
     display: inline;
     margin:5px;
     padding:20px;
+    color: #C8D5B9;
 }
 .centering{
-    text-align: center;
+    text-align: left;
     position: relative;
     top:25%;
 }
 
 /* this is where for projects transition */
 .projects-holder{
-    margin: 10px 30px;
+    margin: 0px 30px;
     padding: 10px 10px;
     text-align: center;
     position: relative;
@@ -77,16 +82,16 @@ figure {
     float: left;
     height: 12em;
     margin: 1.5em;
-    width: 24em;
+    width: 18em;
     -webkit-transform: perspective(500);
     -webkit-transform-style: preserve-3d;
     -webkit-transition: .5s;
 }
 figure:hover {
-    -webkit-transform: perspective(500) rotateX(90deg) translateY(-3em) translateZ(3em);
+    -webkit-transform: perspective(500) rotateX(90deg) translateY(-3em) translateZ(6em);
 }
 figure > img {
-    background-color: #222;
+    background-color: #111111;
     box-shadow: 0 20px 15px -10px hsla(0,0%,0%,.25);
     display: block;
     height: 100%;
@@ -96,9 +101,10 @@ figure:hover img {
     box-shadow: none;
 }
 figcaption {
-    background-color: #222;
+    background-color: #888888;
     color: #fff;
     padding: 1.5em;
+    height: 12em;
     -webkit-transform: rotateX(-90deg);
     -webkit-transform-origin: 100% 0;
     -webkit-transition: .5s;
