--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,10 +38,12 @@
  .projects{
     width: 100%;
     height: 100vh;
+    text-align: center;
 }
 .about{
     width: 100%;
     height: 100vh;
+    text-align: center;
 }
 #navigation{
     position: fixed;
