--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,24 @@
  *= require_tree .
  *= require_self
  */
-.aboutPara{
-    text-align: left;
+
+/* The colour scheme to use is:  
+FAF3DD
+C8D5B9
+8FC0A9
+#c0968f for contrast*/
+
+#navigation>a:hover{
+    color:#FAF3DD;
+    transition-duration: 1s;
+    transform: scale(1.2);
+}
+
+.bouts{
+    text-align: center;
+}
+.technologies{
+    display: inline-block;
 }
  .logos{
      height:20px;
@@ -25,6 +41,8 @@
 
  .faceThumbnail{
      width: 30vh;
+     float:left;
+     margin:0 2vw;
  }
 
  html {
@@ -41,11 +59,13 @@
     width: 100%;
     height: 100vh;
     text-align: center;
+    color: #FAF3DD;
 }
 .about{
     width: 100%;
     height: 100vh;
-    text-align: center;
+    /* text-align: center; */
+    color: #FAF3DD;
 }
 #navigation{
     position: fixed;
@@ -87,7 +107,7 @@
 figure {
     float: left;
     /* height: 15.3em; */
-    height:30vh;
+    height:28vh;
     margin: 1.5em;
     /* width: 18em; */
     width: 17vw;
@@ -112,7 +132,7 @@ figcaption {
     background-color: #C8D5B9;
     color: #FAF3DD;
     padding: 1.5em;
-    height: 15em;
+    height: 14em;
     -webkit-transform: rotateX(-90deg);
     -webkit-transform-origin: 100% 0;
     -webkit-transition: .5s;
