--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,35 @@ C8D5B9
 8FC0A9
 #c0968f for contrast*/
 
+@keyframes shaking {
+    0%   {transform: scale(1);}
+    20%  {transform: scale(1.4);}
+    50%  {transform: scale(0.8);}
+    75% {transform: scale(1.2);}
+    100% {transform: scale(1);}
+  }
+
+#contact-bar{
+    display: block;
+    position: fixed;
+    bottom:43vh;
+    left: 8vw;
+    width: 1%;
+}
+
+#contact-bar > .navButts {
+    margin: 5px 0px;
+    padding: 0px;
+}
+
+#contact-bar>a:hover{
+    color:#FAF3DD;
+    /* transition-duration: 1s;
+    transform: scale(1.4); */
+    animation-name: shaking;
+    animation-duration: 1.5s;
+}
+
 #navigation>a:hover{
     color:#FAF3DD;
     transition-duration: 1s;
@@ -35,27 +64,27 @@ C8D5B9
  .logos{
      height:20px;
  }
- body{
+body{
      background-color: #8FC0A9;
  }
 
- .faceThumbnail{
+.faceThumbnail{
      width: 30vh;
      float:left;
      margin:0 2vw;
  }
 
- html {
+html {
     scroll-behavior: smooth;
 
   }
- .landing{
+.landing{
      width: 100%;
      height: 100vh;
      color: #FAF3DD;
      /* #C8D5B9 or #FAF3DD */
  }
- .projects{
+.projects{
     width: 100%;
     height: 100vh;
     text-align: center;
@@ -102,6 +131,8 @@ C8D5B9
 .projects-indv{
     display: inline-block;
     margin: 12px 15px;
+    box-sizing: 30%;
+    font-size: 12px;
 }
 
 figure {
@@ -116,7 +147,7 @@ figure {
     -webkit-transition: .5s;
 }
 figure:hover {
-    -webkit-transform: perspective(500) rotateX(90deg) translateY(-1em) translateZ(6em);
+    -webkit-transform: perspective(500) rotateX(90deg) translateY(-3em) translateZ(8em);
 }
 figure > img {
     background-color: #111111;
@@ -132,7 +163,7 @@ figcaption {
     background-color: #C8D5B9;
     color: #FAF3DD;
     padding: 1.5em;
-    height: 14em;
+    height: 16em;
     -webkit-transform: rotateX(-90deg);
     -webkit-transform-origin: 100% 0;
     -webkit-transition: .5s;
