--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -155,6 +155,7 @@ html {
     padding: 0px 10px;
     text-align: center;
     position: relative;
+    top:10vh;
 }
 
 .projects-indv{
@@ -167,7 +168,7 @@ html {
 figure {
     float: left;
     /* height: 15.3em; */
-    height:30vh;
+    height:28vh;
     margin: 1.5em;
     /* width: 18em; */
     width: 17vw;
@@ -178,7 +179,7 @@ figure {
     border-radius: 10%;
 }
 figure:hover {
-    -webkit-transform: perspective(500) rotateX(90deg) translateY(-3em) translateZ(8em);
+    -webkit-transform: perspective(500) rotateX(90deg) translateY(-6em) translateZ(8em);
 }
 figure > img {
     background-color: #111111;
@@ -186,6 +187,7 @@ figure > img {
     display: block;
     height: 100%;
     -webkit-transition: .5s;
+    border-radius: 10%;
 }
 figure:hover img {
     box-shadow: none;
